# AEGIS

./: .gitignore  README.md
.github/workflows/: azure-static-web-apps-black-cliff-029d3a500.yml  azure-static-web-apps-gentle-cliff-031083400.yml  azure-static-web-apps-victorious-hill-0ac31a100.yml  deploy-backend.yml  deploy-frontend.yml  main_aegis.yml
aegis/: .env.example  .gitignore  docker-compose.yml
aegis/backend/: Dockerfile  config.py  main.py  pyproject.toml  requirements.txt  train_model.py
aegis/backend/api/: __init__.py  deps.py  router.py
aegis/backend/api/v1/: __init__.py  health.py  reports.py  scans.py
aegis/backend/models/: __init__.py  enums.py  report.py  scan.py
aegis/backend/models/saved/: ghost_detect_model.joblib  ghost_detect_model_features.npy  ghost_detect_model_scaler.joblib  training_metrics.json
aegis/backend/rules/semgrep/: ai_hallucinated_import.yaml  insecure_llm_call.yaml  prompt_injection.yaml
aegis/backend/services/: __init__.py  breach_secure.py  ghost_detect.py  ingestion.py  proof_verify.py  trust_score.py
aegis/backend/services/ml/: __init__.py  evaluate.py  feature_extractor.py  heuristic_analyzer.py  preprocessing.py  trainer.py
aegis/backend/tests/: __init__.py  conftest.py  test_breach_secure.py  test_feature_extractor.py  test_ghost_detect.py  test_proof_verify.py  test_trust_score.py
aegis/backend/utils/: __init__.py  crypto.py  file_parser.py  git_ops.py  logger.py
aegis/backend/workers/: __init__.py  scan_worker.py
aegis/frontend/: Dockerfile  jsconfig.json  next.config.js  package-lock.json  (+3 more)
(+22 files in other folders)
